Add 404Page, AboutUsPage, change modules

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -223,11 +223,13 @@
     transition: all .5s ease;
     display: inline-block;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .close_btn:hover {
     color: black;
 }
+
 
 
 /* ANIMATIONS */
