--- a/client/src/pageStyle/ErrorPage.module.css
+++ b/client/src/pageStyle/ErrorPage.module.css
@@ -12,51 +12,13 @@
     margin-bottom: 49px;
 }
 
-.form {
-    display: flex;
-    justify-content: center;
-    margin: 0 auto 55px auto;
-    width: 581px;
-}
-
-.input {
-
-    display: block;
-    width: 100%;
-    height: 62px;
-    padding: 0.375rem 0.75rem;
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 2px solid #eaeaea;
-    padding-left: 20px;
-    border-radius: 0;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-.buttonSubmit {
-    color: #fff;
-    width: 62px;
-    height: 62px;
-    line-height: 62px;
-    font-size: 20px;
-    background: #c50215;
-    transition: .3s;
-}
-
-.buttonSubmit:hover {
-    background: #222;
-}
 
 .buttonBack {
     width: 199px;
     height: 47px;
-    line-height: 48px;
+    line-height: 45px;
     margin: 0 auto;
-    margin-top: 23px;
+    margin-top: 20px;
     font-size: 1.6em;
     font-weight: 600;
     background: #000;
@@ -67,9 +29,25 @@
     position: relative;
     display: inline-block;
     overflow: hidden;
+    text-decoration: none;
+    color: #c5c4c4;;
 }
 
 .buttonBack:hover {
     color: #222;
     background: 0 0;
+}
+
+
+@media (max-width: 739px) {
+    .contentPage {
+        margin: 87px 0px 110px 0px;
+    }
+    
+    .image {
+        width: 100%;
+    }
+    .errorTitle {
+        line-height: 40px;
+    }
 }
