--- a/client/src/pageStyle/AboutUsPage.module.css
+++ b/client/src/pageStyle/AboutUsPage.module.css
@@ -96,9 +96,77 @@
   color: #222;
   margin-bottom: 30px;
 }
+.team_member{
+  height: 350px;
+  padding: 0 28px;
+  margin: 28px 0;
+  display: flex;
+  grid-gap: 28px;
+  gap: 28px;
+  align-items: center;
+  white-space: nowrap;
+  justify-content: space-around;
+}
+.team_member_card{
+  width: 26%;
+  height: 350px;
+  border-radius: 20px;
+  text-decoration: none;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  transition: all 0.5s ease-in-out;
+}
+.team_member_img{
+  width: 80%;
+  height: 200px;
+  padding: 20px;
+}
 
-@media (max-width: 739px) {
+.team_member_img img{
+  max-width: 100%;
+  object-fit: contain;
+}
+
+.team_name{
+  font-size: 2rem;
+  line-height: 1.6rem;
+  font-weight: 500;
+  padding: 0 12px;
+  color: #333;
+}
+
+.team_member::-webkit-scrollbar {
+  height: 8px;
+}
+.team_member::-webkit-scrollbar-thumb {
+  background-color: #8d8d8d;
+  border-radius: 100px;
+}
+.team_member::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius: 100px;
+}
+
+@media (max-width: 1100px){
+  .team_member_card {
+    width: 35%;
+  }
+}
+
+@media (max-width: 740px) {
   .history{
     flex-wrap: wrap;
   }
+  .team_member{
+    overflow-x: scroll;
+    overflow-y: hidden;
+    justify-content: stretch;
+  }
+  .team_member_card{
+    width: 100%;
+  }
 }
+
