--- a/client/src/components/Cart/CartBanner.module.css
+++ b/client/src/components/Cart/CartBanner.module.css
@@ -5,7 +5,7 @@
     background-size: cover;
 
     width: 100%;
-    height: 60vh;
+    height: 90vh;
 
     display: flex;
     flex-direction: column;
@@ -25,7 +25,8 @@
 
     background-color: rgba(0, 0, 0, 0.05);
 }
-.cartBanner h1, .cartBanner a {
+.cartBanner h1, 
+.cartPath {
     position: relative;
     text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.1);
     text-transform: capitalize;
@@ -39,10 +40,29 @@
     margin-bottom: 1rem;
 }
 
-.cartPath a{
+.cartPath,
+.cartPath a {
     color: white;
     font-size: 2rem;
     font-weight: 400;
 
     text-decoration: none;
+}
+.cartPath a:hover {
+    color: red;
+}
+
+@media (max-width: 415px) {
+    .cartBanner h1 {
+        font-size: 4rem;
+    }
+    .cartPath {
+        font-size: 1.7rem;
+    }
+}
+
+@media (max-width: 376px) {
+    .cartBanner h1 {
+        font-size: 3.5rem;
+    }
 }
