--- a/client/src/components/Cart/CartTotal.module.css
+++ b/client/src/components/Cart/CartTotal.module.css
@@ -1,6 +1,7 @@
 
 .titleTotal {
     font-size: 2rem;
+    font-weight: 700;
 
     padding: 2rem 2rem;
     padding-bottom: 2.5rem;
@@ -59,6 +60,8 @@
 }
 .checked img {
     width: 20px;
+
+    max-height: 20px;
 }
 
 .divBtn {
@@ -85,18 +88,15 @@
 }
 .divBtn a:hover {
     background: #1dbd67;
+    color: white;
 }
 
-
-
-@media (max-width: 1226px) {
-    .divTotal {
-       width: 500px;
+@media (max-width: 600px) {
+    .totals {
+        font-size: 1.7rem;
     }
-}
 
-@media (max-width: 739px) {
-    .divTotal {
-        width: 450px;
-     }
+    .checked p {
+        font-size: 1.25rem;
+    }
 }
