--- a/client/src/components/Footer/footerStyle.module.css
+++ b/client/src/components/Footer/footerStyle.module.css
@@ -3,7 +3,7 @@ footer.container {
     position: relative;
     
 
-    background-image: url("../../assets/images/footerSrc/footer_bg_2.jpg");
+    background-image: url("../../assets/images/footerSrc/footer_bg.jpg");
     background-size: cover;
 }
 footer.container::before {
@@ -14,7 +14,7 @@ footer.container::before {
     left: 0px;
     right: 0px;
 
-    background-color: rgb(255, 255, 255,0.05);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 .colInfo > *, 
 .trademarks * {
@@ -37,7 +37,7 @@ footer.container a:hover {
 
 .colInfo .colUpper,
 .colInfo .col {
-    width: 15%;
+    width: 20%;
 
     padding-left: 15px;
     padding-right: 15px;
@@ -50,15 +50,17 @@ footer.container a:hover {
     width: 100%;
 
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 
     padding-top: 2rem;
     padding-bottom: 1rem;
 }
 
 
-.colUpper {
-  
+.colInfo .colUpper {
+    padding-left: 90px;
+    padding-right: 10px;
+    
     border-right: 2px solid rgba(199, 199, 199, 0.849);
 }
 .colUpper ul {
@@ -72,10 +74,15 @@ footer.container a:hover {
     word-spacing: 0.07rem;
     letter-spacing: 0.08rem;
 
-    line-height: 2.75rem;
+    line-height: 2rem;
 }
 .colUpper ul li {
+    padding-top: 15px;
+
     padding-left: 50px;
+}
+.colUpper ul li:first-child {
+    padding-top: 0px;
 }
 
 .colInfo .col {
@@ -139,16 +146,16 @@ footer.container a:hover {
     .colUpper ul li {
         padding-left: 35px;
 
-        font-size: 1.4rem;
+        font-size: 1.8rem;
     }
 
     .colInfo .col ul li:first-child {
-        font-size: 1.5rem;
+        font-size: 1.6rem;
         
         padding-bottom: 4px;
     }
     .colInfo .col {
-        font-size: 1.4rem;
+        font-size: 1.5rem;
 
         line-height: 1.6;
     }
@@ -168,11 +175,12 @@ footer.container a:hover {
     }
 }
 
-@media (max-width: 902px) {
+@media (max-width: 938px) {
     .colUpper ul li {
+        padding-top: 5px;
         padding-left: 10px;
 
-        font-size: 1.3rem;
+        font-size: 1.5rem;
     }
 
     .colInfo .col ul li:first-child {
@@ -180,24 +188,74 @@ footer.container a:hover {
        
     }
     .colInfo .col {
-        font-size: 1.3rem;
+        font-size: 1.4rem;
     }
 }
 
-@media (max-width: 739px) {
-    .colInfo .colUpper,
-    .colInfo .col {
-        margin-left: 5px;
-        margin-right: 5px;
+@media (max-width: 738px) {
+    .colUpper ul {
+        line-height: 2rem;
+    }
+}
 
-        padding-left: 10px;
-        padding-right: 15px;
+@media (max-width: 598px) {
+    .colInfo {
+        flex-direction: column;
+
+        align-items: center;
     }
 
-    .colUpper ul li {
-        padding-left: 0px;
-        margin-left: -5px;
+    .colInfo .colUpper,
+    .colInfo .col {
+        width: 70%;
 
-        font-size: 1.2rem;
+        margin-bottom: 20px;
+    }
+
+    .colInfo .colUpper {
+        width: 50%;
+        border-right: none;
+
+        padding-bottom: 30px;
+        border-bottom: rgb(231, 231, 231) 2px solid;
+    }
+
+
+    .colUpper ul li {
+        font-size: 2rem;
+
+        padding-top: 10px;
+        padding-left: 0px;
+
+        text-align: center;
+    }
+
+    .colInfo .col {
+        font-size: 1.8rem;
+        font-weight: 400;
+
+        text-align: center;
+    }
+    .colInfo .col ul li:first-child {
+        font-size: 2.1rem;
+        font-weight: 700;
+    }
+}
+
+@media (max-width: 420px) {
+    .colUpper ul li {
+        font-size: 1.8rem;
+
+        line-height: 2.2rem;
+    }
+
+    .colInfo .col {
+        font-size: 1.7rem;
+
+        text-align: center;
+    }
+    .colInfo .col ul li:first-child {
+        font-size: 2.0rem;
+        font-weight: 600;
     }
 }
