--- a/client/src/components/ServiceSection/ServiceSection.module.css
+++ b/client/src/components/ServiceSection/ServiceSection.module.css
@@ -1,77 +1,134 @@
 section.sectionContainer {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+    margin-top: 60px;
+    margin-bottom: 40px;
+
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.serviceDiv {
+    display: flex;
     justify-content: center;
 
-    margin-top: 70px;
-    margin-bottom: 50px;
+    flex: 1 0 180px;
 
+    border: 2px solid #f4f4f4;
+    
+    padding: 35px 0;
+
+    margin: 10px 5px;
 }
-
-.sectionContainer .serviceDiv {
-    width: 15%;
-
-    text-align: center;
-
-    border-right: black 2px solid;
-
-    padding-left: 15px;
-    padding-right: 15px;
-
+/* .serviceDiv:first-child {
+    margin-left: 50px;
 }
-.sectionContainer .serviceDiv:last-child {   
-    border: none;
-    padding: none;
-}
+.serviceDiv:last-child {
+    margin-right: 50px;
+} */
+
 
 .serviceDiv img {
-    width: 60px;
-    margin-bottom: 15px;
-}
+    align-self: center;
+    width: 50px;
 
-
-.serviceDiv h2 {
-    font-size: 2rem;
-    font-weight: 600;
-    line-height: 2.5rem;
+    max-height: 50px;
     
-    margin-bottom: 5px;
+    margin: 0 10px;
 }
 
-.serviceDiv h3 {
-    font-size: 1.6rem;
+.serviceInfo {
+    display: flex;
+   
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    padding-left: 10px;
+    padding-right: 15px;
+}
+.serviceInfo h2 {
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 2.5rem;
+    letter-spacing: 0.1rem;
+
+    margin-bottom: 1px;
+}
+.serviceInfo h3 {
+    font-size: 1.7rem;
     font-weight: 400;
+    color: #c90215;
 
-    margin-bottom: 5px;
 }
 
-
-
-@media (max-width: 1365px) {
-    .sectionContainer .serviceDiv {
-        width: 20%;
+@media (max-width: 1380px) {
+    .serviceInfo h2 {
+        font-size: 1.9rem;
+    }
+    .serviceInfo h3 {
+        font-size:  1.5rem;
     }
 
-    .serviceDiv h2 {
+    /* .serviceDiv:first-child {
+        margin-left: 5px;
+    }
+    .serviceDiv:last-child {
+        margin-right: 5px;
+    } */
+    
+}
+
+@media (max-width: 1100px) {
+    .serviceInfo {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+}
+
+@media (max-width: 992px) {
+    section.sectionContainer {
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+
+    .serviceInfo h2 {
+        font-size: 1.8rem;
+        line-height: 2rem;
+    }
+    .serviceInfo h3 {
+        font-size:  1.5rem;
+    }
+}
+
+@media (max-width: 798px) {
+    
+}
+
+@media (max-width: 420px) {
+    section.sectionContainer {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .serviceInfo h2 {
         font-size: 1.7rem;
+        line-height: 2rem;
     }
-    .serviceDiv h3 {
-        font-size: 1.5rem;
+    .serviceInfo h3 {
+        font-size:  1.4rem;
+    }
+
+    .serviceDiv {
+        margin-top: 5px;
+
+        justify-content: start;
+
+        padding-left: 20px;
+        padding-right: 10px;
     }
 }
 
-@media (max-width: 1039px) {
-    .sectionContainer .serviceDiv {
-        margin-left: 5px;
-        margin-right: 5px;
-    }
-}
 
-@media (max-width: 739px) {
-    .sectionContainer .serviceDiv {
-        margin-left: 5px;
-        margin-right: 5px;
 
-        padding-left: 10px;
-        padding-right: 15px;
-    }
-}
