--- a/client/src/components/PersonalInfo/MainPartInfo.module.css
+++ b/client/src/components/PersonalInfo/MainPartInfo.module.css
@@ -22,11 +22,25 @@ hr {
 td {
     padding: 10px;
 }
-button {
-    padding: 5px;
-    border-radius: 50px;
-    width: 100px;
-    font-weight: bold;
+.button {
+    cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1.8rem;
+  background: #222;
+  font-weight: medium;
+  color: #fff;
+  padding: 10px 50px 15px 50px;
+  border-radius: 50px;
+  text-transform: capitalize;
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  transition: 0.3s;
+  animation: small-to-big 1s ease-in-out;
+}
+.button:hover {
+    background: #c50215;
 }
 .w3-radio {
     width:24px;
@@ -42,5 +56,15 @@ input {
     width: 300px;
 }
 .date {
-    width: 100px;
+    width: 150px;
+    text-align: center;
+}
+.date:hover {
+    cursor: pointer;
+}
+@media (max-width: 900px) {
+    .container {
+        display: relative;
+        width: 500px;
+    }
 }
