--- a/client/src/components/ProductDetail/SuggestProducts.module.css
+++ b/client/src/components/ProductDetail/SuggestProducts.module.css
@@ -20,6 +20,14 @@
   margin-bottom: 20px;
 }
 
+.progressContainer {
+  display: flex;
+  width: 100%;
+  height: 40vh;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 1255px) {
   .productContainer {
     column-gap: 5px;
