--- a/client/src/components/PersonalInfo/MainPartInfo.module.css
+++ b/client/src/components/PersonalInfo/MainPartInfo.module.css
@@ -9,7 +9,6 @@
   padding: 30px;
   font-size: 18px;
   width: 100%;
-
   box-sizing: border-box;
 }
 
@@ -54,7 +53,7 @@ input {
   font-size: 16px;
 }
 .inputBox {
-  width: 100%;
+  width: 300px;
 }
 .date {
   width: 95%;
@@ -69,8 +68,10 @@ input {
     display: relative;
     width: 100%;
     align-self: center;
-
     padding-left: 20px;
     padding-right: 10px;
+  }
+  .inputBox {
+    width: 100%;
   }
 }
